@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Nov 11, 2009
+---------------------------------------------------------------------
+- Moved hardcoded setting values from config/settings.yml to locale.
+
 Mon, Nov 9, 2009
 ---------------------------------------------------------------------
 - Merged with lanadv/i18n branch (thanks, Lana!)
